Update Message.java
new integer constructor changed